--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 			<img class="logo" src="images/home/ddd.webp" />
       <div class="row imgPixel">
 <p>feel free to leave a note in the guest-book while you're here!</p>
-<p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺♥༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
+<p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
   <a href="/manga" class="navi" ><img src="images/nav/flow.png">most recently updated page: manga <img src="images/nav/flow.png"></a>
-  ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺♥༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
+  ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
  
 
 <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
