--- a/videogames/gameslist/index.html
+++ b/videogames/gameslist/index.html
@@ -134,7 +134,7 @@
                <tr><td>Black The Fall</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Dead Cells</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>TrackMania Nations Forever</td><td>Y</td><td>N</td><td>PC</td><td>Open ended</td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td>Stardew Valley</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td>Quite enjoyable!</td></tr>
+               <tr><td>Stardew Valley</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>Quite enjoyable!</td></tr>
                <tr><td>Left 4 Dead 2 </td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Fran Bow</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Emily Is Away Too</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
@@ -242,7 +242,7 @@
                <tr><td>FEMINAZI: The Triggering</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Break The Game</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Papers Please</td><td>Y</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td>Hotline Miami</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing </td><td>N</td><td>&nbsp;</td></tr>
+               <tr><td>Hotline Miami</td><td>Y</td><td>N</td><td>PC</td><td>On Hold </td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Hotline Miami 2</td><td>N</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>KARAKARA</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>IMMURE</td><td>Y</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
@@ -360,7 +360,7 @@
                <tr><td>Omensight</td><td>Y</td><td>N</td><td>PC</td><td>Not started</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Orwell</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Otaku's Fantasy 2</td><td>Y</td><td>N</td><td>PC</td><td>Not started</td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td>PAC-MAN CHAMPIONSHIP EDITION 2</td><td>Y</td><td>N</td><td>PC</td><td>Not started</td><td>N</td><td>&nbsp;</td></tr>
+               <tr><td>PAC-MAN CHAMPIONSHIP EDITION 2</td><td>Y</td><td>N</td><td>PC</td><td>Quick Look</td><td>N</td><td>never going back</td></tr>
                <tr><td>Partial Control</td><td>Y</td><td>N</td><td>PC</td><td>Not started</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>PAYDAY 2</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Postal</td><td>Y</td><td>N</td><td>PC</td><td>Not started</td><td>N</td><td>&nbsp;</td></tr>
@@ -540,24 +540,37 @@
                <tr><td>Burnout Revenge</td><td>Y</td><td>Y</td><td>PS2</td><td>Finished</td><td>N</td><td></td></tr>
                <tr><td>Deltarune Ch. 1</td><td>Y</td><td>N</td><td>PS2</td><td>Finished</td><td>N</td><td></td></tr>
                <tr><td>Overwatch</td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>probably never again</td></tr>
-               <tr><td>Total War Shogun 2</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td>smart game ;; scary</td></tr>
+               <tr><td>Total War Shogun 2</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>smart game ;; scary</td></tr>
                <tr><td>Valorant</td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>I enjoy</td></tr>
-               <tr><td>Punch Out Wii</td><td>N</td><td>Y</td><td>WII</td><td>Completed</td><td>Maybe</td><td>Beat Title Bout</td></tr>
-               <tr><td>Tiny & Big in Grandpa's Leftovers</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td></td></tr>
+               <tr><td>Punch Out Wii</td><td>N</td><td>Y</td><td>WII</td><td>Finished</td><td>Maybe</td><td>Beat Title Bout</td></tr>
+               <tr><td>Tiny & Big in Grandpa's Leftovers</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td></td></tr>
                <tr><td>About Love, Hate and the other ones </td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
                <tr><td>On Rusty Trails</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
                <tr><td>Gato Roboto</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
                <tr><td>Dead by Daylight</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
                <tr><td>Papers, Please</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
-               <tr><td>GORN</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
-               <tr><td>SuperHot VR</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>GORN</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td></td></tr>
+               <tr><td>SuperHot VR</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td></td></tr>
                <tr><td>Muse Dash</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
-               <tr><td>Super Smash Bros Ultimate</td><td>N</td><td>N</td><td>Switch</td><td>Completed</td><td>N</td><td></td></tr>
-               <tr><td>Animal Crossing: New Horizons</td><td>N</td><td>N</td><td>Switch</td><td>Completed</td><td>N</td><td></td></tr>
-               <tr><td>Xenoblade Chronicles 2</td><td>Y</td><td>N</td><td>Switch</td><td>Completed</td><td>N</td><td></td></tr>
-               <tr><td>Donkey Kong Country: Tropical Freeze</td><td>Y</td><td>N</td><td>Switch</td><td>Completed</td><td>N</td><td></td></tr>
-               <tr><td>Crash Bandicoot 'N Sane Trilogy</td><td>Y</td><td>N</td><td>Switch</td><td>Completed</td><td>N</td><td></td></tr>
-
+               <tr><td>Super Smash Bros Ultimate</td><td>N</td><td>N</td><td>Switch</td><td>Finished</td><td>N</td><td></td></tr>
+               <tr><td>Animal Crossing: New Horizons</td><td>N</td><td>N</td><td>Switch</td><td>Finished</td><td>N</td><td>the one island per console is kinda annoying</td></tr>
+               <tr><td>Xenoblade Chronicles 2</td><td>Y</td><td>N</td><td>Switch</td><td>Finished</td><td>N</td><td></td></tr>
+               <tr><td>Donkey Kong Country: Tropical Freeze</td><td>Y</td><td>N</td><td>Switch</td><td>Finished</td><td>N</td><td></td></tr>
+               <tr><td>Crash Bandicoot 'N Sane Trilogy</td><td>Y</td><td>N</td><td>Switch</td><td>Finished</td><td>N</td><td></td></tr>
+               <tr><td>Beatsaber</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td>my new "favorite" rythym game</td></tr>
+               <tr><td>Five Nights At Freddy's: Help Wanted</td><td>Y</td><td>N</td><td>PC</td><td>Quick</td><td>N</td><td>just a quick look for now, this game gives me nightmares</td></tr>
+               <tr><td>SuperHot Mind Control Delete</td><td>Y</td><td>N</td><td>PC</td><td>Plan To</td><td>N</td><td></td></tr>
+               <tr><td>Accounting+</td><td>Y</td><td>N</td><td>PC</td><td>Quick Look</td><td>N</td><td></td></tr>
+               <tr><td>SteamVR</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td>is it a game?</td></tr>
+               <tr><td>Thumper</td><td>Y</td><td>N</td><td>PC</td><td>Quick Look</td><td>N</td><td></td></tr>
+               <tr><td>Virtual Desktop</td><td>Y</td><td>N</td><td>PC</td><td>Quick Look</td><td>N</td><td>shhhhhhhh its a game</td></tr>
+               <tr><td>Virtual Virtual Reality</td><td>Y</td><td>N</td><td>PC</td><td>Quick Look</td><td>N</td><td></td></tr>
+               <tr><td>VR Toolbox: 360 Desktop</td><td>Y</td><td>N</td><td>PC</td><td>Quick Look</td><td>N</td><td></td></tr>
+               <tr><td>VRChat</td><td>Y</td><td>N</td><td>PC</td><td>Quick Look</td><td>N</td><td></td></tr>
+               <tr><td>Pavlov VR</td><td>Y</td><td>N</td><td>PC</td><td>Plan to</td><td>N</td><td></td></tr>
+               <tr><td>Sound Voltex III</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td>yes my pc is a real japanese arcade cabinet</td></tr>
+               <tr><td>Kshootmania</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>N</td><td>eeeeee ee e e </td></tr>
+               <tr><td>Pikmin</td><td>N</td><td>Y</td><td>WII</td><td>Plan to</td><td>N</td><td></td></tr>
               </tbody></table>
 
 
@@ -566,7 +579,7 @@
 
 
 
-
+              
          
     </div>
   </div>
