--- a/about/index.html
+++ b/about/index.html
@@ -22,7 +22,7 @@
 
   <div class="blog-card spring-fever">
 <div class="title-content">
-  <h3 class="hh"> ✿ Ren "Lennox" Rose ​✿</h3>
+  <h3 class="hh"> ✿ Ren "Omnisai" Rose ​✿</h3>
   <div class="intro"> ~差し迫った愛~</div>
 </div>
 <div class="card-info">
