--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
 <div class="col-sm-12 col-md-3 contentLeft">
 	<h1 style="margin-bottom:30px;"><img src="images/home/title0000.png" alt="RE:LIVE" class="img-center img-title"></h1>
   <img src="images/nav/navig-main.png" class="naviBanners">
+  <a href="/about" class="navi"><img src="images/nav/flow.png">about</a>
+  <a href="/bio" class="navi"><img src="images/nav/flow.png">bio</a>
   <a href="/daily" class="navi"><img src="images/nav/flow.png">daily</a>
   	<a href="/blog" class="navi"><img src="images/nav/flow.png">blog</a>
-  	<a href="/bio" class="navi"><img src="images/nav/flow.png">bio</a>
 		<a href="/chat" class="navi"><img src="images/nav/flow.png">chat</a>
         <a href="/reference" class="navi"><img src="images/nav/flow.png">reference</a>
         <a href="/guestbook" class="navi"><img src="images/nav/flow.png">guest-book</a>
@@ -84,6 +85,13 @@
   <a href="/manga" class="navi" ><img src="images/nav/flow.png">most recently updated page: manga <img src="images/nav/flow.png"></a>
   ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
  
+  <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
+  <div class="col-sm-9 col-md-offset-1">
+    <h3 style="margin-bottom:10px;">7/18/20 </h3>
+    <p style="margin-bottom:30px;">✦ a new age / more fire ✦</p>
+  </div>
+  
+
 
 <div class="col-sm-3 col-md-2"><img src="images/home/tell.jpg" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
