--- a/videogames/gameslist/index.html
+++ b/videogames/gameslist/index.html
@@ -160,7 +160,21 @@
                <tr><td>Bayonetta 2</td><td>N</td><td>N</td><td>PC</td><td>Plan to </td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Windosil</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Clustertruck</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td>Zup! 5</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
+               <tr><td>Zup!</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! 2</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! 3</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td></td></tr>
+               <tr><td>Zup! 4</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! 5</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td></td></tr>
+               <tr><td>Zup! 6</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! 7</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! 8</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! 9</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! F</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! S</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! X</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! XS</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! Zero</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
+               <tr><td>Zup! Zero 2</td><td>Y</td><td>N</td><td>PC</td><td>Not Started</td><td>N</td><td></td></tr>
                <tr><td>EMPORIUM</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Teeworlds</td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Antichamber</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
@@ -186,7 +200,6 @@
                <tr><td>Goat Simulator</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Hacknet</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Everything</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td>Zup! 3</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Yu-Gi-Oh! Duel Links</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Observer</td><td>Y</td><td>N</td><td>PC</td><td>On Hold</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Gloom</td><td>Y</td><td>N</td><td>PC</td><td>Quick look</td><td>N</td><td>&nbsp;</td></tr>
