--- a/mobile/index.html
+++ b/mobile/index.html
@@ -46,6 +46,7 @@
         <a href="/studylogs" class="navi"><img src="../images/nav/flow.png">studylogs</a>
         <a href="/anime" class="navi"><img src="../images/nav/flow.png">ani-me</a>
         <a href="/code" class="navi"><img src="../images/nav/flow.png">code</a>
+        ~<a href="/sites" class="navi"><img src="../images/nav/flow.png">sites</a>
         <a href="/videogames" class="navi"><img src="../images/nav/flow.png">video-games</a>
     
     
