--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     <a href="/studylogs" class="navi"><img src="images/nav/flow.png">studylogs</a>
     <a href="/anime" class="navi"><img src="images/nav/flow.png">ani-me</a>
     <a href="/code" class="navi"><img src="images/nav/flow.png">code</a>
+    <a href="/sites" class="navi"><img src="images/nav/flow.png">sites</a>
     <a href="/videogames" class="navi"><img src="images/nav/flow.png">video-games</a>
+    
 
 
   <img src="images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
