--- a/mobile/index.html
+++ b/mobile/index.html
@@ -73,7 +73,7 @@
 	<div class="col-sm-12">
       <h1>『Re Sight』</h1>
 
-      <p>this mobile site is a vastly simplified version of the desktop, hopefully it functions enough. thanks for visiting! feel free to leave a note in the guest book while you're here!</p>
+      <p>this mobile site is a simplified version of the desktop, hopefully it functions enough. thanks for visiting!</p>
     </div>
     <div class="col-sm-12">
       <!--<h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>
