--- a/art/index.html
+++ b/art/index.html
@@ -47,11 +47,7 @@
 
         <div id="content">
             <p>
-                Welcome to the place where i share my art endeavors, or other art i enjoy
-            </p>
-
-            <p>
-note: i cannot draw, so most all i do is digital
+                Welcome to the place where i share my art endeavors, or other art i enjoy note: i cannot draw, so most all i do is digital
             </p>
         </div>
 				<div id="content2">
@@ -59,6 +55,21 @@ note: i cannot draw, so most all i do is digital
 										<p><a href="https://relivesight.com/">Return to Home Page</a></p>
 								</div>
 						</div>
+
+
+
+
+
+                        <div id="ccontent">
+                            <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1Y9bSZahGocooK8iXGcJGO1FZ0O3brqQt" style="width: 160px;"/>
+                            <br><br><h3>IRL Pics</h3>            <ol class="playlist_info">
+                                <li>edited pictures taken of real life and sometimes pictures of me <</li><br>
+                            </ol>
+                            <a href="/art/irl" class="label3">CLICK TO SEE</a>
+
+
+                    </div>
+
 
                         <div id="ccontent">
                             <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1oWQqccITk_NanMZh2tlljussXZf_GbVP" style="width: 160px;"/>
