--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="row imgPixel">
 <p>feel free to leave a note in the guest-book while you're here!</p>
 <p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
-  <a href="/about" class="navi" ><img src="images/nav/flow.png">most recently updated page: about <img src="images/nav/flow.png"></a>
+  <a href="/sites" class="navi" ><img src="images/nav/flow.png">most recently updated page: sites <img src="images/nav/flow.png"></a>
   ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
  
   <div class="col-sm-3 col-md-2"><img src="images/home/uu22.gif" class="img-center"></div>
