--- a/daily/index.html
+++ b/daily/index.html
@@ -56,6 +56,63 @@
 
 
 
+<br><br>
+<div id="content" class="glowb">
+  <div class="main2">
+      <h2  class="glow">《07.20.20》</h2><br><div id="content2">
+      
+  </div>
+  <h2 class="glowc">┈∞✧༺​♡༻✧∞┈</h2><h1>// Solar-Day: N≡【0019】//</h1><h1 class="glowc">┈∞✧༺​♡༻✧∞┈</h1><br>
+    
+<h3 class="glowc" >—「M.E.T.A.」—</h3>
+<p>~twice around - embracing it all - quite workably really~</p>
+<p class="bruh" class="center">launch 05,,, 500.00 vices: unrated-//: limited... ██████</p>
+
+ <br><h3 class="glowl" >—「01://Website」</h3><p class="left">more is done. im trying to get more and more of the backlogs done as i go (shown in the image section below :: known as 「0X://Breathing」for you uninitiated)
+   which ill address that yes i know the guest book is kinda broken and it will only show 10 comments, yes ill fix it eventually, but for now im trying to make this site a more interesting place to stumble across, with lots of resources and produced things
+   other than just a bio about myself. the first of many steps in that direction is the <a target="_blank" href="https://relivesight.com/sites/"><u>sites page</u></a>. and quite contridictory to this anti-narcisistic change is the
+   <a target="_blank" href="https://relivesight.com/about/"><u></u>about page</u></a> and <a target="_blank" href="https://relivesight.com/art/irl/"><u>irl pics sub-art page</u></a> which feature pics of me that im semi proud of. im trying to find a
+   style, and ill take some time to learn in photoshop when i can~
+ </p>
+<h1 class="glowl">∞༺​♡༻✧</h1>
+
+ <br><h3 class="glowr" >「02://Manga/Shows」—</h3><p class="right" > finished legend of korra - not even sure if i can offer an unbiased stand point on it. 《in english so i can code/etc while watching it? 
+   good corieography? good worldbuilding / character devlopment? talented voice actors?》 yup you win! i literally cant do anything other than appreciate this. nonetheless i truly think it is worth critical 'acclaim'
+   and i will personally discuss and disprove any issues you have with it​♡  
+ </p>
+ <h1 class="glowr">✧༺​♡༻∞</h1>
+
+ <br><h3 class="glowl" >—「03://WebVentures」</h3><p class="left" >
+   i can pretend i was enlightened earlier / but alas i would be deceiving, i have finally mastered irc and tis a great method of communication. special private discussion can happen there,,,
+   i recently discovered
+   <a target="_blank" href="https://lainzine.org/"><u>lainzine</u></a> which has inspired me to potentially develop something like this of my own. hopefully im not too out of place here.
+   it will truly take some intense photoshop practice first, as their covers especially are a sight to behold. four is a/a/a/a//a/a/a/ personal favorite of mine.
+   </p><h1 class="glowl">∞༺​♡༻✧</h1>
+  
+   <br><h3 class="glowc" >—「04://Breathing」—</h3> 
+   
+   <br><br>
+  <img src="https://drive.google.com/uc?export=view&id=1w5JBOqNDt_YgbMCNuQqWgAoErtTYTLfz"style="width: 564px;"/>
+  
+  <br><br><p class="center">// the current state of the management board //</p>
+  
+   <br><br>
+   <img src="https://drive.google.com/uc?export=view&id=1jhmZIDavvlxH3J4UPuNPpZEmRIVf9SF0"style="width: 564px;"/>
+   
+   <br><br><p class="center">// ✧･ﾟ:*✧･ﾟ:*poolside encounters*:･ﾟ✧*:･ﾟ✧ //</p>
+   <br>
+  
+<br><h3 class="glowc">—「Jams of the day」—</h3><p>Elastica - Connection, Dream Affair - The Porter</p>
+<h1 class="glowc">┈∞✧༺​♡༻✧∞┈</h1>
+</div>
+  </div> 
+
+
+
+
+
+
+
       <br><br>
 <div id="content" class="glowb">
   <div class="main2">
