--- a/videogames/hollowknight/index.html
+++ b/videogames/hollowknight/index.html
@@ -107,7 +107,7 @@
                 </p>
                 <br><br>
                 <h1>Verdict</h1><br>
-                <p>buy the game, its way to cheap considering how jam packed it is, even if its not your thing, its worth trying or just supporting the devs.
+                <p>buy the game, its way too cheap considering how jam packed it is, even if its not your thing, its worth trying or just supporting the devs.
                   i love the game even if i hate it sometimes.
                 </p>
         </div>
