--- a/daily/index.html
+++ b/daily/index.html
@@ -46,7 +46,7 @@
 <p>—「03://WebVentures」<br>
   I can pretend i was enlightened earlier / but alas i would be deceiving, i have finally mastered irc and tis a great method of communication. special private discussion can happen there,,,
   i recently discovered
-  <a target="_blank" href="https://lainzine.org/">lainzine</a> which has inspired me to potentially develop something like this of my own. hopefully im not too out of place here.
+  a particular magazine which has inspired me to potentially develop something like this of my own. hopefully im not too out of place here.
   it will truly take some intense photoshop practice first, as their covers especially are a sight to behold. four is a/a/a/a//a/a/a/ personal favorite of mine.
   <br></p>
    <p>—「04://Breathing」<br>
