first css overhaul

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,7 +54,7 @@
             <p>
                 most of these are going to be incomplete, ugly, and dumb. but pr*ct*ce m*kes p*rfect amirite.
 								stars, too, have their own beginnings, but their own power results in their destruction.
-								also alot of the farther down logs (besides the very first (real) one) will just be picture showcases as i can't be bothered to write 25 logs retro-actively
+								also alot of the farther down logs (besides the very first (real) one) will just be picture showcases as i can't be bothered to write 25+ logs retro-actively
 			</p>
 			<p>note: only the ones denoted with [read more] have any helpful information, [look more] means jus sum pics</p>
         </div>
