--- a/art/index.html
+++ b/art/index.html
@@ -63,7 +63,7 @@
                         <div id="ccontent">
                             <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1Y9bSZahGocooK8iXGcJGO1FZ0O3brqQt" style="width: 160px;"/>
                             <br><br><h3>IRL Pics</h3>            <ol class="playlist_info">
-                                <li>edited pictures taken of real life and sometimes pictures of me <</li><br>
+                                <li>edited pictures taken of irl and sometimes pictures of me <</li><br>
                             </ol>
                             <a href="/art/irl" class="label3">CLICK TO SEE</a>
 
@@ -120,7 +120,7 @@
                 <div id="ccontent">
                     <img class="auditorium" src="../images/art/wallpaper/1.png" style="width: 160px;"/>
                     <br><br><h3>Wallpapers</h3>            <ol class="playlist_info">
-                        <li>I made these in PS but i mostly use very talented artists' works and just fit them together for my res~<</li><br>
+                        <li>Made in PS but mostly artists' works refit for my res~<</li><br>
                     </ol>
                     <a href="/art/wallpaper" class="label3">CLICK TO SEE MY ATTEMPTS</a>
 
