--- a/code/index.html
+++ b/code/index.html
@@ -73,7 +73,7 @@
         <div id="ccontent">
             <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1Jg0nlJpffub0XoK0hcn-WAiA6s06vl5O" style="width: 160px;"/>
 						<br><br><h3>ggldcs</h3>            <ol class="playlist_info">
-							<li>not impressive, just automated <</li><br>
+							<li>not impressive, but automated <</li><br>
             </ol>
 						<a href="/code/ggldcs" class="label3">CLICK TO SEE MY CODE</a>
 
