--- a/manga/index.html
+++ b/manga/index.html
@@ -66,7 +66,7 @@
 		<div id="ccontent">
             <img class="auditorium" src="https://drive.google.com/uc?export=view&id=1EPpIAAJnlzWmARhhkpuYRdqZWxWbp4r-" style="width: 160px;"/>
 						<br><br><h3>My Husband is a housewife</h3>            <ol class="playlist_info">
-							<li>✿ I LOVE THIS MANGA SO MUCH​ ✿ <</li><br>
+							<li>✿ I LOVE THIS SO MUCH​ ✿ <</li><br>
             </ol>
 						<a href="/manga/my-husband-is-a-housewife/" class="label3">CLICK TO READ</a>
 
