--- a/daily/index.html
+++ b/daily/index.html
@@ -19,7 +19,7 @@
     <h2>Daily Logs ┈ N≡Days</h2>
     <p>—「0X://Explanation」<br>
       The logs of my semi-day-to-week life. A newly updated aesthetic :: Old can be found Here: <a target="_blank" href="https://relivesight.com/daily/old/">old log style</a>.
-      The other listed blog is aesthetic-only and serves no function / here i log the actual happenings, thanks!~  
+      Here i log the actual happenings of my life, thanks!~  
       </p>
       <p><a id="back" href="https://relivesight.com/">back home</a></p>
 
