--- a/index.html
+++ b/index.html
@@ -35,11 +35,8 @@
 <div class="col-sm-12 col-md-3 contentLeft">
 	<h1 style="margin-bottom:30px;"><img src="images/home/title0000.png" alt="RE:LIVE" class="img-center img-title"></h1>
   <img src="images/nav/navig-main.png" class="naviBanners">
-  <a href="/about" class="navi"><img src="images/nav/flow.png">about</a>
   <a href="/bio" class="navi"><img src="images/nav/flow.png">bio</a>
-  <a href="/daily" class="navi"><img src="images/nav/flow.png">daily</a>
-  	<a href="/blog" class="navi"><img src="images/nav/flow.png">blog</a>
-		<a href="/chat" class="navi"><img src="images/nav/flow.png">chat</a>
+  <a href="/daily" class="navi"><img src="images/nav/flow.png">daily blog</a>
         <a href="/reference" class="navi"><img src="images/nav/flow.png">reference</a>
         <a href="/guestbook" class="navi"><img src="images/nav/flow.png">guest-book</a>
 
@@ -62,7 +59,6 @@
 
   <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
     <a href="/music" class="navi"><img src="images/nav/flow.png">music</a>
-    <a href="/ucc" class="navi"><img src="images/nav/flow.png">coming-soon</a>
     <a href="/concept" class="navi"><img src="images/nav/flow.png">concept</a>
 	<div style="margin:30px 0;">
 	<a href="new.html"><img src="images/home/test.webp" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
