--- a/videogames/gameslist/index.html
+++ b/videogames/gameslist/index.html
@@ -110,7 +110,7 @@
                <tr><td>Saya No Uta / The Song Of Saya</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>ShellShock Live</td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Just Cause 3</td><td>Y</td><td>N</td><td>PC</td><td>Open ended</td><td>N</td><td>&nbsp;</td></tr>
-               <tr><td>A Hat in Time</td><td>Y</td><td>N</td><td>PC</td><td>Finished</td><td>Plan to</td><td>Speedrun, Glitch hunt, 100%</td></tr>
+               <tr><td>A Hat in Time</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>Plan to</td><td>Speedrun, Glitch hunt, 100%, cute vaccum game</td></tr>
                <tr><td>This Spreadsheet</td><td>Y</td><td>N</td><td>PC</td><td>Ongoing</td><td>I wish</td><td>&nbsp;</td></tr>
                <tr><td>Borderlands 2</td><td>Y</td><td>N</td><td>PC</td><td>Open ended</td><td>N</td><td>&nbsp;</td></tr>
                <tr><td>Golf With Your Friends</td><td>Y</td><td>N</td><td>PC</td><td>Online</td><td>N</td><td>&nbsp;</td></tr>
