--- a/concept/chat/index.html
+++ b/concept/chat/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" type="image/png" href="../images/home/pupilpng.png" sizes="1000x1000" />
+  <link rel="icon" type="image/png" href="../../images/home/pupilpng.png" sizes="1000x1000" />
   <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <!--<script type='text/javascript' src='http://0.0.0.0:8080/scaledrone.js'></script>-->
   <meta charset="utf-8">
@@ -21,20 +21,20 @@
   /* CSS Document */
   @font-face {
     font-family: myfont;
-    src: url(../fonts/FUDGED.ttf);
+    src: url(../../fonts/FUDGED.ttf);
   }
   @font-face {
     font-family: myfont2;
-    src: url(../fonts/Archistico_Simple.ttf);
+    src: url(../../fonts/Archistico_Simple.ttf);
   }
   /* WHY WONT BLUELIENS WORK */
   @font-face {
     font-family: myfont3;
-    src: url(../fonts/ohmygosh.ttf);
+    src: url(../../fonts/ohmygosh.ttf);
   }
   @font-face {
     font-family: myfont4;
-    src: url(../fonts/manbowlines.ttf);
+    src: url(../../fonts/manbowlines.ttf);
   }
   * {
     margin:0px;
@@ -47,7 +47,7 @@
     }
 
   body {
-    background-image:url(../images/chat/BWST_7.jpg);
+    background-image:url(../../images/chat/BWST_7.jpg);
     background-color:black;
     color:white;
     overflow-x: hidden;
@@ -79,7 +79,7 @@
 
   #navbar {
 
-    background-image:url(../images/chat/1.png);
+    background-image:url(../../images/chat/1.png);
     background-color:black;
     width:800px;
     height:auto;
@@ -409,7 +409,7 @@
     .members-count,
     .members-list,
     .messages {
-      background-image:url(../images/chat/1.png);
+      background-image:url(../../images/chat/1.png);
       border: 1px solid #e4e4e4;
       padding: 15px;
       margin-bottom: 15px;
