--- a/mobile/index.html
+++ b/mobile/index.html
@@ -36,7 +36,7 @@
 
             <a href="/reference" class="navi"><img src="../images/nav/flow.png">reference</a>
 
-            <a href="/guestbook" class="navi"><img src="../images/nav/flow.png">guest-book</a>
+            <a href="/guestbook" class="navi"><img src="../images/nav/flow.png"><strike>guest-book</strike></a>
     
       <img src="../images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
         <a href="/projects" class="navi"><img src="../images/nav/flow.png">projects</a>
